--- a/index.css
+++ b/index.css
@@ -11,7 +11,8 @@
     background: green;
     border: 0px;
     border-radius: 5px;
-    padding: 10px;
+    padding: 10px 20px;
+    color: aliceblue;
 }
 .paragraph {
 
